feat: add device-aware icons
